added PhilW, removed mention of sourceforge

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -16,12 +16,13 @@ Marius Lindauer \\
 Max Ostrowski \\
 Javier Romero \\
 Torsten Schaub \\
-Sven Thiele \\[30pt]
+Sven Thiele \\
+Philipp Wanko \\[30pt]
 University of Potsdam
 \end{tabular}}
 
 \newpage
-\thispagestyle{empty}\ 
+\thispagestyle{empty}\
 \vfill
 \noindent
 \includegraphics{by-sa}
@@ -36,7 +37,7 @@ This work is licensed under a Creative Commons Attribution-ShareAlike 4.0\\ Inte
 \noindent
 \url{http://creativecommons.org/licenses/by-sa/4.0}
 \newpage
-\thispagestyle{empty}\ 
+\thispagestyle{empty}\
 \section*{Abstract}
 \input{abstract}
 
@@ -62,7 +63,7 @@ they can be saved to disk by clicking their file names.
 \\
 Depending on the viewer, a right or double-click should initiate saving.
 \end{tabular}}
-  
+
 \end{center}
 
 \vfill
@@ -78,7 +79,7 @@ Second edition, version 2.1.0, \today\ % \ (\SVNREVISION)
 
 
 
-%%% Local Variables: 
+%%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "guide"
-%%% End: 
+%%% End:
