augmented version history

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -43,9 +43,11 @@ This work is licensed under a Creative Commons Attribution-ShareAlike 4.0\\ Inte
 
 \bigskip
 \noindent
-This is version~2.1.0 of the Potassco guide;
-it upgrades all code to \clingo{} series 5.
-As well, Section~\ref{sec:asprin} describes \asprin~3.0.
+This is version~2.2.0 of the Potassco guide;
+it describes \asprin~3.1 and \clingoM{DL}~1.0.
+%
+Version~2.1.0 upgraded all code to \clingo{} series~5;
+its Section~\ref{sec:asprin} described \asprin~3.0.
 
 \medskip
 \noindent
@@ -69,7 +71,7 @@ Depending on the viewer, a right or double-click should initiate saving.
 \vfill
 
 \noindent
-Second edition, version 2.1.0, \today\ % \ (\SVNREVISION)
+Second edition, version 2.2.0, \today\ % \ (\SVNREVISION)
 
 \bigskip
 \noindent
