fixed wrong github urls for both clingoDL and LP

--- a/theory.tex
+++ b/theory.tex
@@ -25,7 +25,7 @@ Here, $x$ and $y$ may be terms as described in Section~\ref{subsec:lang:gringo},
 and $k$ is an integer.
 Difference constraint atoms may occur in bodies as well as in heads of rules.
 For a more formal introduction of \clingoM{DL}, please see \cite{jakaosscscwa17a}.
-The following explanations are conform with \clingoM{DL}~1.0.0 which is available here: \url{http://github.org/potassco/clingoDL}.
+The following explanations are conform with \clingoM{DL}~1.0.0 which is available here: \url{http://github.com/potassco/clingoDL}.
 
 
 \subsubsection{Modeling and Solving with \clingoM{DL}}
@@ -437,7 +437,7 @@ Here, we consider linear constraints over integers.
 
 \begin{itemize}
 \item Literature: \cite{jakaosscscwa17a}
-\item URL: \url{http://github.org/potassco/clingoLP}
+\item URL: \url{http://github.com/potassco/clingoLP}
 \item Description: \clingoM{LP} 
   \begin{itemize}
   \item deals with integer and real variables
