add section about anaconda

--- a/guide.bib
+++ b/guide.bib
@@ -29,6 +29,13 @@
   url =           {https://potassco.org},
 }
 
+@misc{conda,
+  howpublished =  {https://conda.io},
+  key =           {conda},
+  title =         {conda website},
+  url =           {https://conda.io},
+}
+
 @article{ankolisc05a,
   author =        {C. Anger and K. Konczak and T. Linke and T. Schaub},
   journal =       {Künstliche Intelligenz},
