--- a/macro.tex
+++ b/macro.tex
@@ -24,32 +24,33 @@
 
 % Systems
 
-\newcommand{\sysfont}{\textit}
 \newcommand{\acthex}{\sysfont{acthex}}
 \newcommand{\adsolver}{\sysfont{adsolver}}
+\newcommand{\anaconda}{\sysfont{anaconda}}
 \newcommand{\anthem}{\sysfont{anthem}}
 \newcommand{\asparagus}{\sysfont{asparagus}}
 \newcommand{\aspartame}{\sysfont{aspartame}}
-\newcommand{\aspic}{\sysfont{aspic}}
 \newcommand{\aspcud}{\sysfont{aspcud}}
+\newcommand{\aspic}{\sysfont{aspic}}
 \newcommand{\aspmt}{\sysfont{aspmt}}
 \newcommand{\asprin}{\sysfont{asprin}}
 \newcommand{\assat}{\sysfont{assat}}
 \newcommand{\berkmin}{\sysfont{berkmin}}
-\newcommand{\chuffed}{\sysfont{chuffed}}
 \newcommand{\chasp}{\sysfont{chasp}}
-\newcommand{\claspD}{\sysfont{claspD}}
+\newcommand{\chuffed}{\sysfont{chuffed}}
 \newcommand{\claspar}{\sysfont{claspar}}
+\newcommand{\claspD}{\sysfont{claspD}}
 \newcommand{\claspfolio}{\sysfont{claspfolio}}
-\newcommand{\clasp}{\sysfont{clasp}}
 \newcommand{\claspre}{\sysfont{claspre}}
+\newcommand{\clasp}{\sysfont{clasp}}
 \newcommand{\clingcon}{\sysfont{clingcon}}
 \newcommand{\clingo}{\sysfont{clingo}}
 \newcommand{\cmodels}{\sysfont{cmodels}}
 \newcommand{\coala}{\sysfont{coala}}
+\newcommand{\conda}{\sysfont{conda}}
 \newcommand{\cplex}{\sysfont{cplex}}
-\newcommand{\dingo}{\sysfont{dingo}}
 \newcommand{\dflat}{\sysfont{dflat}}
+\newcommand{\dingo}{\sysfont{dingo}}
 \newcommand{\dlvhex}{\sysfont{dlvhex}}
 \newcommand{\dlv}{\sysfont{dlv}}
 \newcommand{\ezcsp}{\sysfont{ezcsp}}
@@ -57,8 +58,8 @@
 \newcommand{\fastdownward}{\sysfont{fastdownward}}
 \newcommand{\ftolp}{\sysfont{f2lp}}
 \newcommand{\gasp}{\sysfont{gasp}}
-\newcommand{\gfd}{\sysfont{g12fd}}
 \newcommand{\gecode}{\sysfont{gecode}}
+\newcommand{\gfd}{\sysfont{g12fd}}
 \newcommand{\gidl}{\sysfont{gidl}}
 \newcommand{\gnt}{\sysfont{gnt}}
 \newcommand{\gringo}{\sysfont{gringo}}
@@ -75,17 +76,18 @@
 \newcommand{\measp}{\sysfont{measp}}
 \newcommand{\metasp}{\sysfont{metasp}}
 \newcommand{\mingo}{\sysfont{mingo}}
-\newcommand{\minisat}{\sysfont{minisat}}
+\newcommand{\miniconda}{\sysfont{miniconda}}
 \newcommand{\minisatid}{\sysfont{minisatid}}
+\newcommand{\minisat}{\sysfont{minisat}}
 \newcommand{\minizinc}{\sysfont{minizinc}}
 \newcommand{\mznfzn}{\sysfont{mzn2fzn}}
 \newcommand{\nomorepp}{\sysfont{nomore++}}
 \newcommand{\oclingo}{\sysfont{oclingo}}
 \newcommand{\omiga}{\sysfont{omiga}}
+\newcommand{\picatsat}{\sysfont{picatsat}}
+\newcommand{\picat}{\sysfont{picat}}
 \newcommand{\piclasp}{\sysfont{piclasp}}
 \newcommand{\picosat}{\sysfont{picosat}}
-\newcommand{\picat}{\sysfont{picat}}
-\newcommand{\picatsat}{\sysfont{picatsat}}
 \newcommand{\plasp}{\sysfont{plasp}}
 \newcommand{\quontroller}{\sysfont{quontroller}}
 \newcommand{\reify}{\sysfont{reify}}
@@ -98,6 +100,7 @@
 \newcommand{\smodelsr}{\sysfont{smodels}$_r$}
 \newcommand{\smodels}{\sysfont{smodels}}
 \newcommand{\sugar}{\sysfont{sugar}}
+\newcommand{\sysfont}{\textit}
 \newcommand{\teaspoon}{\sysfont{teaspoon}}
 \newcommand{\unclasp}{\sysfont{unclasp}}
 \newcommand{\wasp}{\sysfont{wasp}}
