--- a/introduction.tex
+++ b/introduction.tex
@@ -37,8 +37,8 @@ please consult the support pages at~\cite{potassco}
 or use the Potassco mailing list:
 \href{mailto:potassco-users@lists.sourceforge.net}{\texttt{potassco-users@lists.sourceforge.net}}.
 
-To easily install software from the potassco collection, including up-to-date Python-enabled \clingo\ versions,
-the \conda~\cite{conda} package management system can be used.
+For easily installing potassco software, including up-to-date Python-enabled \clingo\ versions,
+we recommand using the \conda~\cite{conda} package management system.
 \begin{enumerate}
 \item
 Install either the light-weight \miniconda\ or the slightly larger \anaconda\ distribution.
