updated version spec with conda; ATTN doesn't compile (\conda)

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -44,7 +44,9 @@ This work is licensed under a Creative Commons Attribution-ShareAlike 4.0\\ Inte
 \bigskip
 \noindent
 This is version~2.2.0 of the Potassco guide;
-it describes \asprin~3.1 and \clingoM{DL}~1.0.
+it describes the systems \asprin~3.1 and \clingoM{DL}~1.0
+as well as the installation of potassco software through
+the \conda{} package management system.
 %
 Version~2.1.0 upgraded all code to \clingo{} series~5;
 its Section~\ref{sec:asprin} described \asprin~3.0.
