--- a/theory.tex
+++ b/theory.tex
@@ -36,7 +36,7 @@ The most common usage of \clingoM{DL} in its default configuration are rules of 
   \end{align*}
 Here, $L_i$ for $1\leq i \leq n$ are literals as described in \ref{subsec:gringo:normal}.
 Intuitively, it means that whenever the body of such a rule holds, 
-the linear equation represented by the head has to be satisfied as well.
+the linear inequation represented by the head has to be satisfied as well.
 Conversely, if the body does not hold, no constraints are posed to the QF-IDL theory.
 \begin{example}\label{ex:dl:simple}
          See the following simple example:
@@ -91,13 +91,13 @@ where the ASAP assignment represents the earliest time point at which tasks may 
 \centering
 {\def\svgscale{.4}
 \input{figures/dl}}
-\caption{Flow shop: instance with three tasks and two machines\label{fig:fs:ins}}
+\caption{Flow shop instance with three tasks and two machines\label{fig:fs:ins}}
 \end{figure}
 \begin{figure}[ht]
 \centering
 {\def\svgwidth{\linewidth}
 \input{figures/dl-sol}}
-\caption{Flow shop: solutions for all possible permutations\label{fig:fs:sol}}
+\caption{Flow shop solutions for all possible permutations\label{fig:fs:sol}}
 \end{figure}
 % --------------------------------------------------------------------------------
 %
@@ -120,9 +120,9 @@ Lighter shades of the same color are for the first and darker ones for the secon
 For example, task \code{a} needs to be processed for~$3$ time units on the first and~$4$ time units on the second machine.
 
 % --------------------------------------------------------------------------------
-\lstinputlisting[float=ht,mathescape=true,escapeinside={\#(}{\#)},basicstyle={\ttfamily\small},label={prg:fs:ins}]{examples/shop.lp}
+\lstinputlisting[float=ht,mathescape=true,escapeinside={\#(}{\#)},basicstyle={\ttfamily\small},label={prg:fs:ins},caption={Flow shop instance}]{examples/shop.lp}
 % --------------------------------------------------------------------------------
-\lstinputlisting[float=ht,literate={\%\%}{}{0},mathescape=true,escapeinside={\#(}{\#)},basicstyle={\ttfamily\small},label={prg:fs:enc}]{examples/flow.lp}
+\lstinputlisting[float=ht,literate={\%\%}{}{0},mathescape=true,escapeinside={\#(}{\#)},basicstyle={\ttfamily\small},label={prg:fs:enc},caption={Flow shop encoding}]{examples/flow.lp}
 % --------------------------------------------------------------------------------
 %
 Next we encode this problem using difference constraints.
@@ -136,7 +136,7 @@ we use difference constraints to calculate the duration of the generated permuta
 %
 The difference constraint in Line~\ref{prg:fs:permutation:seq} guarantees that the tasks are executed in the right order.
 For example, $\code{(a,1)} - \code{(a,2)} \leq -d$ ensures that task~\code{a} can only be executed on machine~\code{2} if it has finished on machine~\code{1}.
-Hence, variable \code{(a,2)} has to be assigned so that it is greater or equal to $\code{(a,2)}-d$ where $d$ is the duration of task \code{a} on machine \code{1}.
+Hence, variable \code{(a,2)} has to be assigned so that it is greater or equal to $\code{(a,1)}+d$ where $d$ is the duration of task \code{a} on machine \code{1}.
 Similarly, $\code{(a,1)} - \code{(b,1)} \leq -d$ makes sure that task~\code{b} can only be executed on machine~\code{1} if task~\code{a} has finished on machine~\code{1}.
 While the first constraint is a fact (see Line~\ref{prg:fs:permutation:seq:machine}),
 the latter is subject to the generated permutation of tasks (see Line~\ref{prg:fs:permutation:seq:task}).
@@ -347,21 +347,22 @@ Therefore, it does not contradict $\code{x}-\code{y}\leq -4$ which always has to
 }
 Similarly, executing Example~\ref{ex:dl:fs} with strict semantics leads to undesired results.
 In this case, the program is unsatisfiable.
-Consider tasks \code{a} and \code{b} and the ground rules that sequentialize them:
-\begin{lstlisting}[numbers=none]
+Consider the following subset of ground rules that order the execution of tasks \code{a}, \code{b} and \code{c} on resource \code{1}:
+\begin{lstlisting}[numbers=none].
 &diff {(a,1)-(b,1)} <= -3 :- seq((a,1),(b,1),3).
-&diff {(b,1)-(a,1)} <= -1 :- seq((b,1),(a,1),1).
-&diff {(a,2)-(b,2)} <= -4 :- seq((a,2),(b,2),4).
-&diff {(b,2)-(a,2)} <= -6 :- seq((b,2),(a,2),6).
+&diff {(b,1)-(c,1)} <= -1 :- seq((b,1),(c,1),1).
+&diff {(a,1)-(c,1)} <= -3 :- seq((a,1),(c,1),3).
 \end{lstlisting}
-Note that among the first two and last two rule bodies exactly one of them has to be true, respectively,
-one signifying \code{a} is executed before \code{b} and the other vice versa.
-This means that for both pairs of rules, one head difference constraint atom is true and the other is false.
-If \code{a} is before \code{b} and strict semantics is enabled, 
-the first two rules lead to a conflict because difference constraints $\code{(a,1)}-\code{(b,1)}\leq -3$ and $\code{(b,1)}-\code{(a,1)}\leq 0$ constitute a contradiction.
-Similarly, \code{b} before \code{a} is impossible due to the last two rules
-requiring $\code{(b,2)}-\code{(a,2)}\leq -6$ and $\code{(a,2)}-\code{(b,2)}\leq 3$ to be satisfied simultaneously.
-Therefore, the whole program is unsatisfiable.
+For example, in case of execution order \code{a b c}, 
+\code{seq((a,1),(b,1),3)} and \code{seq((b,1),(c,1),1)} is true,
+but \code{seq((a,1),(c,1),3)} is false.
+Though the last sequence is implied, it is not needed to correctly schedule the tasks and would only add a redundant difference constraint.
+The non-strict semantics allows this optimization 
+by only requiring difference constraints $\code{(a,1)-(b,1)}\leq -3$ and $\code{(b,1)-(c,1)}\leq -1$ to be true (first two rules)
+and leaving the truth value of $\code{(a,1)-(c,1)}\leq -3$ open (third rule). 
+The strict semantics, however, enforces the negation of $\code{(a,1)-(c,1)}\leq -3$, $\code{(a,1)-(c,1)}\leq 2$, to hold.
+This constitutes a conflict with the first two difference constraints and therefore excludes execution order \code{a b c}.
+Other possible permutations encounter similar conflicts, ultimately leading to the program being unsatisfiable under strict semantics.
 \end{example}
 
 The previous examples, illustrate that either \emph{non-strict semantics with difference constraint atoms in the head} or
@@ -416,8 +417,8 @@ because the exact negation of a real difference constraint cannot be automatical
 \clingoM{DL} requires the user to be familiar with the capabilities and limitations of modeling using difference constraints.
 While it is, for example, not possible to express inequalities with more then three variables or variables with coefficients unequal one,
 a lot of common linear constraints can be easily expressed.
-The following table shows general rules with commonly used linear constraints and their \clingoM{DL} counterpart.
-Here, we consider linear constraints over integers.
+The following table shows rules with commonly used linear constraints in the head and their \clingoM{DL} counterpart.
+Here, we consider linear constraints over integers and non-strict semantics.
 
 \begin{center}
 \begin{tabular}{l|l}
@@ -425,7 +426,7 @@ Here, we consider linear constraints over integers.
 \code{$x\leq k$ $\leftarrow$ $L_1$,$\dots$,$L_n$} & \code{\&diff\text{ }\{$x$-0\}\text{ }<=\text{ }$k$ :- $L_1$,$\dots$,$L_n$.}\\
 \code{$x<k$ $\leftarrow$ $L_1$,$\dots$,$L_n$}     & \code{\&diff\text{ }\{$x$-0\}\text{ }<=\text{ }V :- V=$k$-1,$L_1$,$\dots$,$L_n$.}\\
 \code{$x\geq k$ $\leftarrow$ $L_1$,$\dots$,$L_n$} & \code{\&diff\text{ }\{0-$x$\}\text{ }<=\text{ }$-k$ :- $L_1$,$\dots$,$L_n$.}\\
-\code{$x>k$ $\leftarrow$ $L_1$,$\dots$,$L_n$}     & \code{\&diff\text{ }\{$x$-0\}\text{ }<=\text{ }V :- V=$k$-1,$L_1$,$\dots$,$L_n$.}\\
+\code{$x>k$ $\leftarrow$ $L_1$,$\dots$,$L_n$}     & \code{\&diff\text{ }\{0-$x$\}\text{ }<=\text{ }V :- V=$-k$-1,$L_1$,$\dots$,$L_n$.}\\
 \code{$x\leq y+k$ $\leftarrow$ $L_1$,$\dots$,$L_n$}   & \code{\&diff\text{ }\{$x$-$y$\}\text{ }<=\text{ }$k$ :- $L_1$,$\dots$,$L_n$.}\\
 \code{$x\geq y+k$ $\leftarrow$ $L_1$,$\dots$,$L_n$}   & \code{\&diff\text{ }\{$y$-$x$\}\text{ }<=\text{ }$-k$ :- $L_1$,$\dots$,$L_n$.}
 \end{tabular}
